--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -75,7 +75,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>portal</finalName>
+        <finalName>admin</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
