--- a/portal/src/main/resources/application-dev.properties
+++ b/portal/src/main/resources/application-dev.properties
@@ -5,8 +5,8 @@ server.context-path=/portal
 #validationQuery=SELECT 1 from dual
 
 
-# rdsÉÏ¿ª·¢²âÊÔ
-jdbc_url=jdbc:mysql://47.75.137.194:3306/house_keeper?useSSL=false&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-jdbc_username=huishou
-jdbc_password=K@ong198818
+# rdsï¿½Ï¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
+jdbc_url=jdbc:mysql://127.0.0.1:3306/house_keeper?useSSL=false&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc_username=root
+jdbc_password=root
 validationQuery=SELECT 1 from dual
