--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -138,6 +138,12 @@
         </dependency>
         <!-- Logging -->
 
+        <!--pagehelper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>admin</finalName>
