--- a/admin/src/main/resources/application-dev.properties
+++ b/admin/src/main/resources/application-dev.properties
@@ -2,14 +2,52 @@ server.port=8085
 server.address=127.0.0.1
 server.sessionTimeout=30
 server.contextPath=/admin
-#jdbc_url=jdbc:mysql://127.0.0.1:4000/ktv?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#jdbc_username=root
-#jdbc_password=1213123
-#validationQuery=SELECT 1 from dual
 
 
-# rdsÉÏ¿ª·¢²âÊÔ
+# rdsï¿½Ï¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 jdbc_url=jdbc:mysql://47.75.137.194:3306/house_keeper?useSSL=false&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc_username=huishou
 jdbc_password=K@ong198818
 validationQuery=SELECT 1 from dual
+
+#ç¦æ­¢thymeleafç¼“å­˜
+spring.thymeleaf.cache=false
+
+#pagehelperåˆ†é¡µæ’ä»¶é…ç½®
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
+
+#logger
+### direct log messages to stdout ###
+log4j.appender.stdout = org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target = System.out
+log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern = %d{ABSOLUTE} %-5p %-5C %M:%-L%x -> %m%n
+
+### direct log messages to file ###
+log4j.appender.file = org.apache.log4j.RollingFileAppender
+log4j.appender.file.File = ../logs/extr.log
+log4j.appender.file.MaxFileSize = 2000KB
+log4j.appender.file.MaxBackupIndex =1
+log4j.appender.file.layout = org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern = %d %-5p %-5C:%L %x -> %m%n
+
+###\u663E\u793ASQL\u8BED\u53E5\u90E8\u5206###
+log4j.logger.com.ibatis=DEBUG
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+log4j.logger.java.sql.Connection=DEBUG
+log4j.logger.java.sql.Statement=DEBUG
+log4j.logger.java.sql.PreparedStatement=DEBUG
+
+# Root logger level.
+#  DEBUG < INFO < WARN < ERROR < FATAL
+log4j.rootLogger = debug, file, stdout
+
+# Logging level for the framework packages:
+log4j.logger = debug
+
+
