--- a/base/pom.xml
+++ b/base/pom.xml
@@ -108,5 +108,10 @@
             <artifactId>java-jwt</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
