--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -144,6 +144,49 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.1.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/src/lib/commons-codec-1.9.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>commons</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/src/lib/commons-codec-1.9.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>commons</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/src/lib/commons-codec-1.9.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>commons</groupId>
+            <artifactId>fileupload</artifactId>
+            <version>1.3.1</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/src/lib/commons-fileupload-1.3.1.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>commons</groupId>
+            <artifactId>io</artifactId>
+            <version>2.4</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/src/lib/commons-io-2.4.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>commons</groupId>
+            <artifactId>json</artifactId>
+            <version>2.4</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/src/lib/json.jar</systemPath>
+        </dependency>
     </dependencies>
     <build>
         <finalName>admin</finalName>
