--- a/admin/src/main/resources/config.json
+++ b/admin/src/main/resources/config.json
@@ -1,7 +1,7 @@
 /* 前后端通信相关的配置,注释只允许使用多行方式 */
 {
     /* 上传图片配置项 */
-    "basePath": "L:/",
+    "basePath": "/Users/xuzhiwu/self_study/",
     "imageActionName": "uploadimage", /* 执行上传图片的action名称 */
     "imageFieldName": "upfile", /* 提交的图片表单名称 */
     "imageMaxSize": 2048000000, /* 上传大小限制，单位B */
